--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -23,7 +23,7 @@
     {{action.name}}
 {% endblock %}
 {% block title_bar_sub %}
-    Repower at Home Action
+    {{ SITE_NAME }} Action
 {% endblock %}
 {% block title_bar_floaters %}
     <div class="title_bar_floater">
