--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -1,7 +1,7 @@
 {% extends "base/nav_9c.html" %}
 {% load dated_static %}
 {% load humanize %}
-{% block title %}Actions to Repower at Home{% endblock %}
+{% block title %}Actions{% endblock %}
 {% block title_bar_image %}sprite_section_action_large{% endblock %}
 {% block title_bar_title %}Actions{% endblock %}
 {% block title_bar_copy %}
