--- a/badges/templates/badges/detail.html
+++ b/badges/templates/badges/detail.html
@@ -10,7 +10,7 @@
     {{badge.name}}
 {% endblock %}
 {% block title_bar_sub %}
-    Repower at Home Badge
+    {{ SITE_NAME }} Badge
 {% endblock %}
 {% block content %}
     <img src="{{ badge.img_mega }}" height="160" width="160" alt="{{ badge.name }}"/>
