--- a/badges/templates/badges/list.html
+++ b/badges/templates/badges/list.html
@@ -1,6 +1,6 @@
 {% extends "base/nav_9c.html" %}
 {% load dated_static %}
-{% block title %}Repower at Home Badges{% endblock %}
+{% block title %}Badges{% endblock %}
 
 {% block title_bar_image %}sprite_section_badges_large{% endblock %}
 {% block title_bar_title %}Badges{% endblock %}
