--- a/events/templates/events/_search_listing.html
+++ b/events/templates/events/_search_listing.html
@@ -1,6 +1,6 @@
 {% extends "base/nav_9c.html" %}
 {% load dated_static %}
-{% block title %}Events on Repower at Home{% endblock %}
+{% block title %}Event Search{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url event-show %}">Events</a> &rsaquo;
