--- a/groups/templates/groups/_search_listing.html
+++ b/groups/templates/groups/_search_listing.html
@@ -1,6 +1,6 @@
 {% extends "groups/base.html" %}
 {% load dated_static %}
-{% block title %}Communities on Repower at Home{% endblock %}
+{% block title %}Communities{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url group_list %}">Communities</a> &rsaquo;
