--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -6,7 +6,7 @@
 {% block title %}{{group.name}}{% endblock %}
 {% block extrahead %}
     {% if group.slug %}
-        <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower at Home Community Activity" />
+        <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="{{ SITE_NAME }} Community Activity" />
     {% endif %}
 {% endblock %}
 {% block title_bar_image %}
