--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,7 +1,7 @@
 {% extends "base/nav_9c.html" %}
 
 {% load dated_static %}
-{% block title %}Communities on Repower at Home{% endblock %}
+{% block title %}Communities{% endblock %}
 {% block title_bar_image %}sprite_section_communities_large{% endblock %}
 {% block title_bar_title %}Community{% endblock %}
 {% block title_bar_copy %}
