--- a/media_widget/templates/media_widget/_media_widget_gallery.html
+++ b/media_widget/templates/media_widget/_media_widget_gallery.html
@@ -33,7 +33,7 @@
     {% csrf_token %}
     <p class="smaller">
         By uploading a photo you affirm your 
-        acceptance of and compliance with the Repower at Home
+        acceptance of and compliance with the {{ SITE_NAME }}
         <a href="/terms/">Terms of Use</a> and <a href="/privacy/">Privacy Policy</a>.
     </p>
     <button type="submit">Upload photo</button>
