--- a/records/templates/records/_ask_to_share.html
+++ b/records/templates/records/_ask_to_share.html
@@ -6,7 +6,7 @@
         <img src="{% dated_static 'images/theme/we_fb.jpg' %}" width="218" height="80"/>
     </div>
     <p>
-        Like peas and carrots, Facebook and Repower at Home go together. Linking your account to Facebook helps you
+        Like peas and carrots, Facebook and {{ SITE_NAME }} go together. Linking your account to Facebook helps you
         share your achievements and inspire your friends to become part of the movement.
     </p>
     {% for error in form.social_network.errors %}
