--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -6,54 +6,7 @@
                     <script type="text/javascript">_gaq.push(['_trackPageview', '{{ message }}']);</script>
                 {% else %}  
                     {% if "ga_track_conversion" in message.tags %}
-                        <!-- Google Code for Repower at Home Sign Up Conversion Page (grant account)-->
-                        <script type="text/javascript">
-                            /* <![CDATA[ */
-                            var google_conversion_id = 1055391835;
-                            var google_conversion_language = "en";
-                            var google_conversion_format = "3";
-                            var google_conversion_color = "ffffff";
-                            var google_conversion_label = "LZ1HCMXv7QEQ24Cg9wM";
-                            var google_conversion_value = 0;
-                            /* ]]> */
-                        </script>
-                        <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js"></script>
-                        <noscript>
-                            <div style="display:inline;">
-                                <img height="1" width="1" style="border-style:none;" alt="" 
-                                    src="http://www.googleadservices.com/pagead/conversion/1055391835/?label=LZ1HCMXv7QEQ24Cg9wM&amp;guid=ON&amp;script=0"/>
-                            </div>
-                        </noscript>
-                    
-                        <!-- Google Code for Repower at Home Sign Up Conversion Page (paid account)-->
-                        <script type="text/javascript">
-                            /* <![CDATA[ */
-                            var google_conversion_id = 1019290765;
-                            var google_conversion_language = "en";
-                            var google_conversion_format = "3";
-                            var google_conversion_color = "ffffff";
-                            var google_conversion_label = "Ow0dCLvK9gEQjcmE5gM";
-                            var google_conversion_value = 0;
-                            /* ]]> */
-                        </script>
-                        <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js"></script>
-                        <noscript>
-                            <div style="display:inline;">
-                                <img height="1" width="1" style="border-style:none;" alt="" 
-                                    src="http://www.googleadservices.com/pagead/conversion/1019290765/?label=Ow0dCLvK9gEQjcmE5gM&amp;guid=ON&amp;script=0"/>
-                            </div>
-                        </noscript>
-                        <!-- Google Website Optimizer Conversion Script -->
-                        <script type="text/javascript">
-                        if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
-                        (document.location.protocol=='https:'?'s://ssl':'://www')+
-                        '.google-analytics.com/ga.js"></sc'+'ript>')</script>
-                        <script type="text/javascript">
-                        try {
-                        var gwoTracker=_gat._getTracker("UA-11623269-2");
-                        gwoTracker._trackPageview("/2042308889/goal");
-                        }catch(err){}</script>
-                        <!-- End of Google Website Optimizer Conversion Script -->
+                        {# Put some GA conversion code here #}
                         {% if user.get_profile.facebook_connect_only %}
                             <script type="text/javascript">_gaq.push(['_trackPageview', '/register/facebook']);</script>
                         {% else %}
