--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load dated_static %}
 
-{% block title %}{{ title }} | Repower at Home site admin{% endblock %}
+{% block title %}{{ title }} | {{ SITE_NAME }} site admin{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">Repower at Home Administration</h1>
+<h1 id="site-name">{{ SITE_NAME }} Administration</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
