--- a/templates/rah/feedback_email.html
+++ b/templates/rah/feedback_email.html
@@ -5,6 +5,6 @@
 {{feedback.comment|safe|linebreaks}}
 
 <h4>Additional Info</h4>
-<b>User Agent: </b>{{ request.META.HTTP_USER_AGENT }}
-<b>Real IP: </b>{{ request.META.HTTP_X_REAL_IP }}
+<b>User Agent: </b>{{ request.META.HTTP_USER_AGENT }}<br/>
+<b>Real IP: </b>{{ request.META.HTTP_X_REAL_IP }}<br/>
 <b>Path Translated: </b>{{ request.META.PATH_TRANSLATED }}
