--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -79,8 +79,8 @@
         </div>
         <div id="social_networks_tab">
             <p>
-                Share the good times by linking to your online networks. After you link up, you can publish you Repower
-                at Home activity to your Facebook or Twitter steams.
+                Share the good times by linking to your online networks. After you link up, you can publish your
+                {{ SITE_NAME }} activity to your Facebook or Twitter steams.
             </p>
             <ul class="plain_list">
                 <li>
