--- a/templates/rah/search.html
+++ b/templates/rah/search.html
@@ -1,7 +1,7 @@
 {% extends "base/nav_9c.html" %}
 {% block title %}Results for '{{request.GET.q}}'{% endblock %}
 {% block content %}
-    <h1>Search Repower at Home</h1>
+    <h1>Search {{ SITE_NAME }}</h1>
     <div id="cse_search_results"></div>
     <script type="text/javascript">
         var googleSearchIframeName = "cse_search_results";
