--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base/nav_form.html" %}
 {% load dated_static %}
-{% block title %}Log in to Repower at Home{% endblock %}
+{% block title %}Log in{% endblock %}
 {% block breadcrumbs %}
    <a href="{% url index %}">Home</a> &raquo; 
    Log in
