--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,1 +1,1 @@
-Use this link to reset your Repower at Home password: {{protocol}}://{{domain}}/reset/{{uid}}-{{token}}/
+Use this link to reset your password: {{protocol}}://{{domain}}/reset/{{uid}}-{{token}}/
