--- a/challenges/templates/challenges/list.html
+++ b/challenges/templates/challenges/list.html
@@ -1,6 +1,6 @@
 {% extends "base/nav_9c.html" %}
 {% load humanize %}
-{% block title %}Repower at Home Challenges{% endblock %}
+{% block title %}Challenges{% endblock %}
 {% block title_bar_image %}sprite_section_challenges_large{% endblock %}
 {% block title_bar_title %}Challenges{% endblock %}
 {% block title_bar_copy %}
