--- a/commitments/templates/commitments/card.html
+++ b/commitments/templates/commitments/card.html
@@ -1,6 +1,6 @@
 {% extends "commitments/base.html" %}
 {% load dated_static %}
-{% block title %}My commitments on Repower at Home{% endblock %}
+{% block title %}My commitments on {{ SITE_NAME }}{% endblock %}
 
 {% block right_content %}
     <div class="box_two_top"></div>
