--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -1,6 +1,6 @@
 {% extends "commitments/base.html" %}
 {% load dated_static %}
-{% block title %}My commitments on Repower at Home{% endblock %}
+{% block title %}My commitments{% endblock %}
 
 {% block right_content %}
 <div class="grid_6 alpha">
