--- a/events/templates/events/_pilot_commitment_card.html
+++ b/events/templates/events/_pilot_commitment_card.html
@@ -3,7 +3,7 @@
 <h4>Phone: <span class="attendee_label">{{ guest.contributor.phone }}</span></h4>
 <br />
 <form action="" method="post">
-    <h2>Repower Your Home</h2>
+    <h2>Empower Your Home</h2>
     <table class="commitment_table">
         <thead>
             <tr>
