--- a/static/css/common.css
+++ b/static/css/common.css
@@ -49,10 +49,10 @@ Header Header Header Header Header Header Header Header Header Header Header Hea
     position:relative;
     background-color: #103665; }
 #header{ position:relative; }
-#header_logo { position:absolute; left: 0px; top:22px; color: #fff; }
-.logo_text {font-family:"MuseoSlab900"; font-size: 44px;}
+#header_logo { position:absolute; left: 0px; top:9px; color: #fff; }
+.logo_text {font-family:"MuseoSlab900", Tahoma, sans-serif; font-size: 44px; line-height: 46px;}
 .logo_text:hover { text-decoration: none;}
-#header #cse_search_box_form{ left:383px; top:20px; width: 290px;}
+#header #cse_search_box_form{ left:420px; top:20px; width: 290px;}
 #cse_search_box{
     width:246px;
 }
@@ -137,7 +137,7 @@ Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Foo
     padding-top: 12px;
     line-height:24px; 
 }
-#footer_logo { padding-top:64px; display: block;}
+#footer_logo { padding-top:54px; display: block; font-size: 34px;}
 #footer_social_icons{ margin-top:30px; margin-left: 20px; }
 #footer_social_icons a {margin-left: 6px;}
 #footer_social_icons a:hover { text-decoration:none; }
