--- a/templates/rah/base_email.html
+++ b/templates/rah/base_email.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Repower at Home</title>
+<title></title>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 
 <style type="text/css">
@@ -27,15 +27,6 @@
                     <td style="font-size: 11px; color:#318bcb; font-family: helvetica,verdana,arial; text-align: center;"></td>
                 </tr>
             </table>
-            <table border="0" cellpadding="0" cellspacing="0" width="650" height="90">
-                <tr>
-                    <td valign="top">
-                        <a href="http://repowerathome.com/?utm_source=crm_email&amp;utm_medium=email&amp;utm_content=hpheader">
-                            <img src="http://prod.static.repowerathome.com/images/email/logo_header.png" width="650" height="100" border="0" alt=""/>
-                        </a>
-                    </td>
-                </tr>
-            </table>
             <table bgcolor="#FFFFFF" cellpadding="0" cellspacing="0" width="650" style="border: 1px solid #dddddd; border-top: 5px solid #7fba00;">
                 <tr>
                     <td valign="top" width="20">
@@ -53,17 +44,6 @@
                     </td>
                 </tr>
             </table><br/>
-            <table border="0" cellpadding="0" cellspacing="0" width="650">
-                <tr>
-                    <td colspan="3" style="font-size: 12px; color:#318bcb; font-family: helvetica,verdana,arial; text-align: center;">
-                        <div style="margin: 5px 0px 15px; font-size: 12px;">
-                            <a href="http://www.repowerathome.com/?utm_source=crm_email&amp;utm_medium=email&amp;utm_content=hpfooter" style="font-size: 12px; color:#668a33;">Repower at Home</a> | 
-                            <a href="http://www.facebook.com/repowerathome" style="font-size: 12px; color:#668a33">Facebook</a> | 
-                            <a href="http://twitter.com/repowerathome" style="font-size: 12px; color:#668a33">Twitter</a>
-                        </div>
-                    </td>
-                </tr>
-            </table>
         </td>
     </tr>
 </table>
