--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,6 +1,6 @@
 {% extends "base/nav_form.html" %}
 {% load dated_static %}
-{% block title %}Sign up for Repower at Home{% endblock %}
+{% block title %}Sign up{% endblock %}
 {% block breadcrumbs %}
    <a href="{% url index %}">Home</a> &raquo; 
    Sign up
