--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -70,6 +70,7 @@
         <div id="content_container" class="{{ section_class }}">
             <div class="container_12">
                 <div class="grid_12 alpha omega">
+                    <!--{% include "_messages.html" %}-->
                     {% block 12c_content %}
                     {% endblock %}
                 </div>
